[package]
name = "geo-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws-config = "0.8.0"
aws-sdk-s3 = "0.8.0"
aws-types = "0.8.0"
futures = "0.3.17"
lambda_http = "0.5.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = "1.13.0"
tokio-stream = "0.1.8"
tokio-util = { version = "0.7", features = ["io"] }
aws-smithy-http = "0.38.0"
cidr = "0.2.1"
tracing-subscriber = "0.3"
simple-error = "0.2"
maxminddb = "0.21.0"
lazy_static = "1.4.0"
