[package]
name = "geo-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws-config = "0.55"
aws-sdk-s3 = "0.28"
lambda_http = { version = "0.8", default-features = false, features = ["apigw_http"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
maxminddb = "0.23.0"
